--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Cego\\ElasticApmAgentLaravelOctane\\ElasticApmAgentLaravelOctaneServiceProvider"
+                "Cego\\ElasticApmAgentLaravel\\ElasticApmAgentLaravelOctaneServiceProvider"
             ]
         }
     }
