--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php": "^8.0",
-        "ext-elastic_apm": "*"
+        "ext-elastic_apm": "*",
+        "laravel/framework": "^9.0"
     },
     "require-dev": {
         "cego/php-cs-fixer": "^0.1.5",
